Kubernetes/auth0/authentication/auth0-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: kubernetes-auth-server
spec:
  replicas: 1
  selector:
    matchLabels:
      app: kubernetes-auth-server
  template:
    metadata:
      labels:
        app: kubernetes-auth-server
    spec:
      containers:
      - name: kubernetes-auth-server
        image: wardviaene/kubernetes-auth-server:1.0.1
        imagePullPolicy: Always
        ports:
        - name: app-port
          containerPort: 3000
