Kubernetes/auth0/authentication/ingress.yaml
#kubectl apply -f https://raw.githubusercontent.com/kubernetes/ingress-nginx/controller-v1.0.0/deploy/static/provider/cloud/deploy.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: auth0rules
  namespace: default
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
    nginx.ingress.kubernetes.io/secure-backends: "true"
    nginx.ingress.kubernetes.io/ssl-passthrough: "true"
    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
    nginx.ingress.kubernetes.io/backend-protocol: "HTTPS"
    # reference production issuer
    cert-manager.io/issuer: "auth0-letsencrypt-prod"
spec:
  ingressClassName: nginx
  tls:
  - hosts:
    - authserver.narasimhakubernetes.xyz
    # reference secret for production TLS certificate
    secretName: auth0-production-certificate
  rules:
   - host: authserver.narasimhakubernetes.xyz
     http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: kubernetes-auth-server
            port:
              number: 80
